--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -31,9 +31,9 @@
     </dependency>
 
     <dependency>
-        <groupId>com.googlecode.json-simple</groupId>
-        <artifactId>json-simple</artifactId>
-        <version>1.1.1</version>
+        <groupId>com.google.appengine</groupId>
+        <artifactId>appengine-api-1.0-sdk</artifactId>
+        <version>1.9.59</version>
     </dependency>
   </dependencies>
 
